torch engine working for mdf

--- a/applications/polynomials/polynomialsjl.ipynb
+++ b/applications/polynomials/polynomialsjl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "334adbd7",
    "metadata": {
     "execution": {
@@ -18,7 +18,7 @@
     "# load the package\n",
     "using HomotopyContinuation\n",
     "using Plots\n",
-    "using Distributions\n",
+    "# using Distributions\n",
     "using Pandas\n",
     "using LinearAlgebra"
    ]
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "3563b0ce-3a41-4e36-a1ab-efe7adc730d4",
    "metadata": {
     "execution": {
@@ -51,7 +51,7 @@
        "0.2"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "id": "5ecce9e4-c63d-4030-8063-8cb50cb52830",
    "metadata": {
     "execution": {
@@ -80,62 +80,54 @@
      "data": {
       "text/plain": [
        "3-element Vector{Expression}:\n",
-       " 2.0 - a1 + 0.1*x1*a2 + 0.8*x1*a3\n",
-       "                 2.5 - a2 + x2*a3\n",
-       " 3.0 - a3 + 0.1*x3*a1 + 0.8*x3*a2"
+       " 2.0 - a₁ + 0.1*a₂*x₁ + 0.8*a₃*x₁\n",
+       "                 2.5 - a₂ + a₃*x₂\n",
+       " 3.0 - a₃ + 0.1*a₁*x₃ + 0.8*a₂*x₃"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "@var x1, x2, x3, a1, a2, a3\n",
-    "@var λ[1:3];\n",
-    "h1 = 0.1x1*a2+0.8x1*a3+b[1]-a1\n",
-    "h2 = x2*a3+b[2]-a2\n",
-    "h3 = 0.1x3*a1+0.8x3*a2+b[3]-a3\n",
-    "f = (a1-a1e)^2+([x1^2 x2^2 x3^2]*w.^2)[1];\n",
-    "vars = [x1, x2, x3, a1, a2, a3]\n",
+    "@var x[1:3], a[1:3]\n",
+    "@var l[1:3];\n",
+    "h1 = 0.1x[1]*a[2]+0.8x[1]*a[3]+b[1]-a[1]\n",
+    "h2 = x[2]*a[3]+b[2]-a[2]\n",
+    "h3 = 0.1x[3]*a[1]+0.8x[3]*a[2]+b[3]-a[3]\n",
+    "f = (a[1]-a1e)^2+([x[1]^2 x[2]^2 x[3]^2]*w.^2)[1];\n",
+    "vars = [x; a]\n",
     "h = [h1, h2, h3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "fe078650-ca15-4051-a99a-182d53b5034b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-04T12:17:16.085000-04:00",
-     "iopub.status.busy": "2022-05-04T12:17:16.085000-04:00",
-     "iopub.status.idle": "2022-05-04T12:17:16.086000-04:00",
-     "shell.execute_reply": "2022-05-04T12:17:16.086000-04:00"
-    },
-    "tags": []
-   },
+   "execution_count": 56,
+   "id": "a9d0f3ed",
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$$ 1.69*x1^2 + 2.25*x2^2 + 1.44*x3^2 + (-0.2 + a1)^2 $$"
-      ],
       "text/plain": [
-       "1.69*x1^2 + 2.25*x2^2 + 1.44*x3^2 + (-0.2 + a1)^2"
+       "3-element Vector{Expression}:\n",
+       " 2.0 - a₁ + 0.1*a₂*x₁ + 0.8*a₃*x₁\n",
+       "                 2.5 - a₂ + a₃*x₂\n",
+       " 3.0 - a₃ + 0.1*a₁*x₃ + 0.8*a₂*x₃"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f"
+    "h"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "id": "0b0618d8-5022-41be-983b-44d0b9594ded",
    "metadata": {
     "execution": {
@@ -154,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "c62d33ba-8a03-4bf5-ae9e-2d9d3eb05cf9",
    "metadata": {
     "execution": {
@@ -167,12 +159,12 @@
    },
    "outputs": [],
    "source": [
-    "kkt = [dfdx - J'*λ; h];"
+    "kkt = [dfdx - J'*l; h];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "id": "ccecc959-529a-4432-af11-5f37059d52fa",
    "metadata": {
     "execution": {
@@ -185,12 +177,12 @@
    },
    "outputs": [],
    "source": [
-    "Opt = System(kkt, variables = [vars; λ]);"
+    "Opt = System(kkt, variables = [vars; l]);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "id": "dc4758cc-80cd-4a5a-a1fe-5bc190dd3753",
    "metadata": {
     "execution": {
@@ -206,10 +198,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mTracking 68 paths... 100%|██████████████████████████████| Time: 0:00:02\u001b[39m\n",
-      "\u001b[34m  # paths tracked:                  68\u001b[39m\n",
-      "\u001b[34m  # non-singular solutions (real):  52 (6)\u001b[39m\n",
-      "\u001b[34m  # singular endpoints (real):      0 (0)\u001b[39m\n",
+      "\r\u001b[32mTracking 68 paths... 100%|██████████████████████████████| Time: 0:00:08\u001b[39m\r\n",
+      "\u001b[34m  # paths tracked:                  68\u001b[39m\r\n",
+      "\u001b[34m  # non-singular solutions (real):  52 (6)\u001b[39m\r\n",
+      "\u001b[34m  # singular endpoints (real):      0 (0)\u001b[39m\r\n",
       "\u001b[34m  # total solutions (real):         52 (6)\u001b[39m\n"
      ]
     },
@@ -220,11 +212,11 @@
        "========================\n",
        "• 68 paths tracked\n",
        "• 52 non-singular solutions (6 real)\n",
-       "• random_seed: 0x6a27d19b\n",
+       "• random_seed: 0xa9db2224\n",
        "• start_system: :polyhedral\n"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 45,
    "id": "69b8aa33-912e-4823-bb57-b463ec5970fc",
    "metadata": {
     "execution": {
@@ -246,75 +238,32 @@
     },
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "real_sols = real_solutions(res);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "1e9fe238-01d8-488d-a01a-903e7ed7256e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-04T12:20:37.217000-04:00",
-     "iopub.status.busy": "2022-05-04T12:20:37.217000-04:00",
-     "iopub.status.idle": "2022-05-04T12:20:37.219000-04:00",
-     "shell.execute_reply": "2022-05-04T12:20:37.218000-04:00"
-    },
-    "tags": []
-   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5698273209859522"
+       "6-element Vector{Vector{Float64}}:\n",
+       " [-103.43463884546874, -50.18445693671601, -21.532808574867246, 41.01766328850924, -4.96168637778993, 0.14868520719870146, 926.8030375592098, -1518.8468339922006, -468.3264427071819]\n",
+       " [0.3739904475761244, -0.42427126829027106, -1.5637825851059706, 1.8424971295626027, 2.8758661828251446, -0.8859100554694891, -3.0015753247886927, 2.1550954247769836, -1.8123934684776306]\n",
+       " [-199.94735230111021, -14.113429764528798, -0.15654761814249213, 318.72226341913324, -39.840274633097415, 2.9999989612383935, 426.64771406011283, -21.170151977040224, -67946.88118028022]\n",
+       " [-0.2562781539152825, -7.999987102963897, -0.15727589809371736, 1.9360641484503358, 3238.2632022919174, -404.47105234621023, -3.472125547220079, 0.08900498998510058, -0.00017483165731362274]\n",
+       " [-86.26527444524132, -110.15227359082984, -68.58498880914202, 2.8054005227348853, -0.29646107438837604, 0.0253872297250629, 31230.34700607084, -19524.983092951712, -4554.284887913078]\n",
+       " [-0.5071253944274235, 0.047480163853524944, 0.17885518902212438, 0.4899359590452504, 2.6609340270408377, 3.389500245561811, -0.5756414406277239, 0.06303605896492505, 0.236530876510019]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluate.(f, vars=>real_sols[6][1:6])"
+    "real_sols = real_solutions(res)\n",
+    "#real_sols = permutedims(hcat(real_solutions(res)...))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "a5ee7250-651f-45fb-a71d-3e630565f489",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-04T12:20:30.401000-04:00",
-     "iopub.status.busy": "2022-05-04T12:20:30.401000-04:00",
-     "iopub.status.idle": "2022-05-04T12:20:30.403000-04:00",
-     "shell.execute_reply": "2022-05-04T12:20:30.403000-04:00"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element Vector{Float64}:\n",
-       "  0.02200000000000002\n",
-       " -0.0006700000000001427\n",
-       " -0.00033490000000009623"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "evaluate.(h, vars=>[-0.50, 0.047, 0.179, 0.489, 2.66, 3.39])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 46,
    "id": "5256e3e0-fef3-49b7-b67c-45143f0fc262",
    "metadata": {
     "execution": {
@@ -359,15 +308,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-86.265274</td>\n",
-       "      <td>-110.152274</td>\n",
-       "      <td>-68.584989</td>\n",
-       "      <td>2.805401</td>\n",
-       "      <td>-0.296461</td>\n",
-       "      <td>0.025387</td>\n",
-       "      <td>31230.347006</td>\n",
-       "      <td>-19524.983093</td>\n",
-       "      <td>-4554.284888</td>\n",
+       "      <td>0.373990</td>\n",
+       "      <td>-0.424271</td>\n",
+       "      <td>-1.563783</td>\n",
+       "      <td>1.842497</td>\n",
+       "      <td>2.875866</td>\n",
+       "      <td>-0.885910</td>\n",
+       "      <td>-3.001575</td>\n",
+       "      <td>2.155095</td>\n",
+       "      <td>-1.812393</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -395,15 +344,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.373990</td>\n",
-       "      <td>-0.424271</td>\n",
-       "      <td>-1.563783</td>\n",
-       "      <td>1.842497</td>\n",
-       "      <td>2.875866</td>\n",
-       "      <td>-0.885910</td>\n",
-       "      <td>-3.001575</td>\n",
-       "      <td>2.155095</td>\n",
-       "      <td>-1.812393</td>\n",
+       "      <td>-86.265274</td>\n",
+       "      <td>-110.152274</td>\n",
+       "      <td>-68.584989</td>\n",
+       "      <td>2.805401</td>\n",
+       "      <td>-0.296461</td>\n",
+       "      <td>0.025387</td>\n",
+       "      <td>31230.347006</td>\n",
+       "      <td>-19524.983093</td>\n",
+       "      <td>-4554.284888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -423,22 +372,64 @@
       "text/plain": [
        "            0           1          2  ...             6             7             8\n",
        "0 -103.434639  -50.184457 -21.532809  ...    926.803038  -1518.846834   -468.326443\n",
-       "1  -86.265274 -110.152274 -68.584989  ...  31230.347006 -19524.983093  -4554.284888\n",
+       "1    0.373990   -0.424271  -1.563783  ...     -3.001575      2.155095     -1.812393\n",
        "2 -199.947352  -14.113430  -0.156548  ...    426.647714    -21.170152 -67946.881180\n",
        "3   -0.256278   -7.999987  -0.157276  ...     -3.472126      0.089005     -0.000175\n",
-       "4    0.373990   -0.424271  -1.563783  ...     -3.001575      2.155095     -1.812393\n",
+       "4  -86.265274 -110.152274 -68.584989  ...  31230.347006 -19524.983093  -4554.284888\n",
        "5   -0.507125    0.047480   0.178855  ...     -0.575641      0.063036      0.236531\n",
        "\n",
        "[6 rows x 9 columns]\n"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "DataFrame(real_sols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "425ff164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minarg = (real_sols .|> x->evaluate(f, vars=>x[1:6])) |> argmin |> x->real_sols[x];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "a5ee7250-651f-45fb-a71d-3e630565f489",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:20:30.401000-04:00",
+     "iopub.status.busy": "2022-05-04T12:20:30.401000-04:00",
+     "iopub.status.idle": "2022-05-04T12:20:30.403000-04:00",
+     "shell.execute_reply": "2022-05-04T12:20:30.403000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " -8.326672684688674e-17\n",
+       "  1.1102230246251565e-16\n",
+       " -4.5102810375396984e-17"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate.(h, vars=>minarg[1:6])"
    ]
   },
   {
@@ -2522,15 +2513,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.2",
+   "display_name": "Julia 1.10.2",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.2"
+   "version": "1.10.2"
   }
  },
  "nbformat": 4,
