--- a/minimdo/development/pearl.ipynb
+++ b/minimdo/development/pearl.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'foundations'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\johan\\github\\minimdo\\minimdo\\development\\pearl.ipynb Cell 1\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/johan/github/minimdo/minimdo/development/pearl.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfoundations\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprojectables\u001b[39;00m \u001b[39mimport\u001b[39;00m SympyProjectable\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/johan/github/minimdo/minimdo/development/pearl.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfoundations\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprojectables\u001b[39;00m \u001b[39mimport\u001b[39;00m ProjectableModel,ProjectableIntersection\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/johan/github/minimdo/minimdo/development/pearl.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfoundations\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprojectables\u001b[39;00m \u001b[39mimport\u001b[39;00m restructure\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'foundations'"
+     ]
+    }
+   ],
    "source": [
     "from foundations.projectables import SympyProjectable\n",
     "from foundations.projectables import ProjectableModel,ProjectableIntersection\n",
@@ -50,6 +62,7 @@
     "Vd = Hydro.Var('Vd', pi/4*(Df**2*hf+Ds**2*ts+Dd**2*td))\n",
     "FB = Hydro.Var('F_B', rhow*Vd*g)\n",
     "FW = Hydro.Var('F_W', FB)\n",
+    "# center of buoyancy above the keel calculations\n",
     "xd,xs = td/2,td+ts/2\n",
     "xf1,xf2 = td+ts+hf/2, td+ts+tf/2\n",
     "totA1, totA2 = hf*Df+ts*Ds+td*Dd, tf*Df+ts*Ds+td*Dd\n",
@@ -66,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +99,7 @@
        " '53.19 %')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +107,7 @@
    "source": [
     "yH = {Df:2, Ds:2, Dd:2, tf:0.1, ts:0.1, td:0.1, hf:0.9*0.3, mtot:800}\n",
     "HF = Hydro.functional()\n",
-    "HF.dict_in_dict_out(yH), '{:.2f} %'.format(HF.dict_in_dict_out(yH)[BM]*100)"
+    "HF.dict_in_dict_out(yH, cleanup=True), '{:.2f} %'.format(HF.dict_in_dict_out(yH, cleanup=True)[BM]*100)"
    ]
   },
   {
@@ -106,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +146,7 @@
        " td: 0.3652492275538281}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +154,7 @@
    "source": [
     "yM = {mbatt:100, A_s:0.5, FW:36130}\n",
     "MF = Mass.functional()\n",
-    "MF.dict_in_dict_out({**yH, **yM})"
+    "MF.dict_in_dict_out({**yH, **yM}, cleanup=True)"
    ]
   },
   {
@@ -153,41 +166,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "combined_projectables = Hydro.projectables+Mass.projectables\n",
     "HydroMass = ProjectableIntersection(*combined_projectables)\n",
-    "HydroMass.solvepar(x_initial={mtot:1000, td:0.01})"
+    "HydroMass.solvepar(x_initial={mtot:500, td:0.01})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{m_{platform}: 4883.212631203283,\n",
-       " td: 0.5185373748041823,\n",
-       " Vd: 4.770625860886347,\n",
-       " F_B: 47904.31591210402,\n",
-       " F_W: 47904.31591210402,\n",
-       " K_B: 0.7592686874020912,\n",
-       " K_G: 0.3592686874020912,\n",
+       "{m_{platform}: 4883.212631203285,\n",
+       " td: 0.5185373748041826,\n",
+       " Vd: 4.770625860886348,\n",
+       " F_B: 47904.31591210404,\n",
+       " F_W: 47904.31591210404,\n",
+       " K_B: 0.7592686874020914,\n",
+       " K_G: 0.35926868740209134,\n",
        " I: 0.785398163397448,\n",
-       " B_M: 0.16463210201345085,\n",
+       " B_M: 0.16463210201345083,\n",
        " G_M: 0.5646321020134508,\n",
        " C_{33}: 31546.35289650436,\n",
        " A_{33}: 4051.825142670288,\n",
-       " \\omega_0: 1.7653172652916604,\n",
+       " \\omega_0: 1.7653172652916602,\n",
        " m_{solar}: 5.0,\n",
-       " m_{struct}: 4838.212631203283}"
+       " m_{struct}: 4838.212631203285}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,8 +208,228 @@
    "source": [
     "y = {Df:2, Ds:2, Dd:2, tf:0.1, ts:0.1, hf:0.9, mbatt:0, A_s:0.5}\n",
     "HMF = HydroMass.functional()\n",
-    "z = HMF.dict_in_dict_out(y)\n",
+    "z = HMF.dict_in_dict_out(y, cleanup=True)\n",
     "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HMcoupling = merge_with_coupling(Hydro, Mass)\n",
+    "HMcoupling.solvepar(x_initial={mtot:500, td:0.01, FW:10000})\n",
+    "HMcouplingF = HydroMass.functional()\n",
+    "z = HMcouplingF.dict_in_dict_out(y, cleanup=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{m_{platform}: 4883.212631203285,\n",
+       " td: 0.5185373748041826,\n",
+       " Vd: 4.770625860886348,\n",
+       " F_B: 47904.31591210404,\n",
+       " F_W: 47904.31591210404,\n",
+       " K_B: 0.7592686874020914,\n",
+       " K_G: 0.35926868740209134,\n",
+       " I: 0.785398163397448,\n",
+       " B_M: 0.16463210201345083,\n",
+       " G_M: 0.5646321020134508,\n",
+       " C_{33}: 31546.35289650436,\n",
+       " A_{33}: 4051.825142670288,\n",
+       " \\omega_0: 1.7653172652916602,\n",
+       " m_{solar}: 5.0,\n",
+       " m_{struct}: 4838.212631203285}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HMR = HMcoupling.residuals()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(F_W, m_{platform}, td)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HMcoupling.required_solvevars()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jax import jacfwd\n",
+    "g = jacfwd(HMR.flat_in_flat_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modeling.arghandling import decode, flatten_args, unflatten_args, EncodedFunction\n",
+    "import numpy as np\n",
+    "def adjoints(projectable):\n",
+    "    H = projectable.residuals()\n",
+    "    F = projectable.functional()\n",
+    "    g = jacfwd(H.flat_in_flat_out)\n",
+    "    N = sum(map(sum, F.decoder.shapes))\n",
+    "    def calculate(*args):\n",
+    "        x_F =  F.encoder.decode(args)\n",
+    "        x0 = {**x_F, **F.dict_out_only(*args)}\n",
+    "        x0_np = H.encoder.encode(x0, flatten=True)\n",
+    "        d = decode(flatten_args(g(x0_np).T), \n",
+    "                   H.encoder.order, \n",
+    "                   [(N,) for elt in H.encoder.order], unflatten=True)\n",
+    "        grad_h_y = np.vstack(F.decoder.encode(d)).T\n",
+    "        grad_h_x = np.vstack(F.encoder.encode(d)).T\n",
+    "        inv_grad_h_y = np.linalg.inv(grad_h_y)\n",
+    "        DJ = -np.dot(inv_grad_h_y, grad_h_x)\n",
+    "        return unflatten_args(flatten_args(DJ), [(N,) for elt in F.encoder.order])\n",
+    "    return EncodedFunction(calculate, F.encoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HMcouplingA = adjoints(HMcoupling)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import cProfile\n",
+    "# import re\n",
+    "# cProfile.run('HMcouplingA.dict_in_flat_out(y)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([ 3.76358302e+03,  3.76358302e+04,  5.08083708e+04,\n",
+       "              4.44102797e+04,  7.27595761e-12, -1.31725406e+04,\n",
+       "             -5.98992842e+01, -5.98992842e+00,  3.83647607e+02,\n",
+       "              3.83647607e+03,  5.17924269e+03,  4.52704176e+03,\n",
+       "              9.09494702e-13, -1.34276662e+03, -6.10594130e+00,\n",
+       "             -6.10594130e-01,  1.93032689e-02,  1.93032689e-01,\n",
+       "              6.10594130e-01,  5.07778573e-01, -5.18537375e-01,\n",
+       "             -4.17561441e-01, -1.89877050e-03, -1.89877050e-04],            dtype=float64)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HMcouplingA.dict_in_flat_out(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = HMR.encoder.encode({**z, **y}, flatten=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([0.00000000e+00, 0.00000000e+00, 1.11022302e-16],            dtype=float64, weak_type=True)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HMR.flat_in_flat_out(x0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[ 1.00000000e+00,  0.00000000e+00, -3.15463529e+04,\n",
+       "              -3.15463529e+03, -3.15463529e+04, -3.15463529e+04,\n",
+       "              -2.83917176e+04, -1.63579630e+04,  0.00000000e+00,\n",
+       "               0.00000000e+00,  0.00000000e+00],\n",
+       "             [-1.01936799e-01,  1.00000000e+00,  0.00000000e+00,\n",
+       "               0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "               0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "               0.00000000e+00,  0.00000000e+00],\n",
+       "             [-1.20175892e-05,  0.00000000e+00,  1.00000000e+00,\n",
+       "               2.59259259e-02,  2.59259259e-01,  0.00000000e+00,\n",
+       "               2.59259259e-02,  5.18537375e-01,  2.59259259e-01,\n",
+       "               1.17892550e-03,  1.17892550e-04]],            dtype=float64, weak_type=True)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g(x0)"
    ]
   },
   {
@@ -309,16 +542,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +585,7 @@
        " G_M: 0.6603473636207681}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,30 +617,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multidisciplinary Feasible with restructured equations"
+    "### Multidisciplinary Feasible with original equations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x0 = {Df:2, Ds:1.5, Dd:2, tf:0.15, ts:5, td:0.2, A_s:0.1, mbatt:100}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Df, Dd, Ds, tf, td, ts, A_s, m_{batt})"
+       "(Df, Ds, Dd, td, tf, ts, A_s, m_{batt})"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +642,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = {Df:2, Ds:1.5, Dd:2, tf:0.15, ts:5, td:0.2, A_s:0.1, mbatt:100}\n",
+    "#x0 = z\n",
+    "x0_all = {**RSF.dict_in_dict_out(x0), **x0} # Initial guesses for all variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,16 +670,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HydroMass.solvepar(x_initial={mtot:100, td:0.1})\n",
+    "HMF = HydroMass.functional()\n",
+    "obj_mdf, ineq_mdf = (eliminate_vars(obj, HMF), \n",
+    "                    eliminate_vars(ineq, HMF))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPT_MDF = optimizer_solver(obj_mdf, ineqs=(ineq_mdf,), bounds={\n",
+    "    Df:(.1,10), Ds:(.1,10), Dd:(.1,10), \n",
+    "    tf:(.1,10), ts:(.1,.5), td:(.1,10), A_s:(.1,10), mbatt:(.1,1000)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0_mdf = {key:val for (key,val) in x0_all.items() if key in OPT_MDF.decoder.order}\n",
+    "x0_mdf[Df] = x0_mdf[Df]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([8352.33779832])"
+       "DeviceArray([8352.33779832], dtype=float64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_mdf.dict_in_only(x0_mdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "z1 = OPT_MDF.dict_in_dict_out(x0=x0_mdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multidisciplinary Feasible with restructured equations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = {Df:2, Ds:1.5, Dd:2, tf:0.15, ts:5, td:0.2, A_s:0.1, mbatt:100}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([8352.33779832], dtype=float64, weak_type=True)"
+      ]
+     },
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,17 +797,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\johan\\miniconda3\\envs\\minimdo\\lib\\site-packages\\scipy\\optimize\\optimize.py:282: RuntimeWarning: Values in x were outside bounds during a minimize step, clipping to bounds\n",
-      "  warnings.warn(\"Values in x were outside bounds during a \"\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -501,26 +814,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({Df: 0.7215651273422026,\n",
-       "  Dd: 0.11111110691770178,\n",
+       "({Df: 0.7133636651119954,\n",
        "  Ds: 0.1,\n",
-       "  tf: 0.45821489836307244,\n",
+       "  Dd: 0.11111111101233184,\n",
        "  td: 0.1,\n",
-       "  ts: 0.4999999995111061,\n",
+       "  tf: 0.46881162270138726,\n",
+       "  ts: 0.5,\n",
        "  A_s: 0.1,\n",
        "  m_{batt}: 0.1},\n",
-       " array([177.62893818]),\n",
-       " array([ 1.40724702e-08, -5.49408615e-01,  3.77406841e-09,  3.98813309e-09,\n",
-       "        -2.00000040e-02,  0.00000000e+00]))"
+       " DeviceArray([177.62895723], dtype=float64),\n",
+       " DeviceArray([ 1.22509003e-10, -5.42027299e-01,  8.89013446e-11,\n",
+       "              -3.92121908e-03, -1.60787809e-02,  0.00000000e+00],            dtype=float64))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,10 +1056,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.18"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
