--- a/minimdo/development/test_arghandling.ipynb
+++ b/minimdo/development/test_arghandling.ipynb
@@ -2,22 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from modeling.arghandling import flatten_args, unflatten_args\n",
-    "from modeling.arghandling import encode, decode\n",
+    "from modeling.arghandling import encode, decode, Encoding, EncodedFunction\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1, np.array([1,2]), np.array([[4.,5],[6,7]])]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': array([1., 2., 3.])}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = [np.array(1), np.array([1,2]), np.array([[4,5],[6,7]])]"
+    "{'a': np.array([1,2,3.])}"
    ]
   },
   {
@@ -28,10 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "(1,\n",
-       " array([1, 2]),\n",
-       " array([[4, 5],\n",
-       "        [6, 7]]))"
+       "dtype('float64')"
       ]
      },
      "execution_count": 4,
@@ -40,18 +57,28 @@
     }
    ],
    "source": [
-    "v = flatten_args(x)\n",
-    "unflatten_args(v, shapes=((1,), (2,), (2,2)), cleanup=True)"
+    "np.array([1,2,3.]).dtype"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([1., 1., 2., 4., 5., 6., 7.], dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "w = encode({'a': 1, 'b': np.array([[4,5],[6,7]]), 'c': 3}, \n",
-    "        ('c', 'b', 'a'), flatten=True)"
+    "v = flatten_args(x)\n",
+    "v"
    ]
   },
   {
@@ -62,10 +89,10 @@
     {
      "data": {
       "text/plain": [
-       "{'c': 3,\n",
-       " 'b': array([[4, 5],\n",
-       "        [6, 7]]),\n",
-       " 'a': 1}"
+       "(1.0,\n",
+       " array([1., 2.]),\n",
+       " array([[4., 5.],\n",
+       "        [6., 7.]]))"
       ]
      },
      "execution_count": 6,
@@ -74,48 +101,29 @@
     }
    ],
    "source": [
-    "decode(w, order=['c', 'b', 'a'], shapes=((1,), (2,2), (1,)), \n",
-    "       unflatten=True, cleanup=True)"
+    "unflatten_args(v, shapes=((1,), (2,), (2,2)), convertscalars=True, tonumpy=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = lambda x, y, z: (x**2+z+y+np.exp(-y), np.array([x,y,z]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_in_dict_out = lambda d: decode(f(*encode(d, ('x','y','z'))), \n",
-    "                                      ('a','b'), shapes=((1,),(3,)))\n",
-    "dict_in_flat_out = lambda d: flatten_args(f(*encode(d, ('x','y','z'))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
+       "DeviceArray([3, 4, 5, 6, 7, 1], dtype=int32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict_in_dict_out({'x': 1, 'y': 2, 'z': 3})"
+    "w = encode({'a': 1, 'b': np.array([[4,5],[6,7]]), 'c': 3}, \n",
+    "        ('c', 'b', 'a'), flatten=True)\n",
+    "w"
    ]
   },
   {
@@ -126,10 +134,130 @@
     {
      "data": {
       "text/plain": [
-       "array([6.13533528, 1.        , 2.        , 3.        ])"
+       "{'c': 3.0,\n",
+       " 'b': array([[4., 5.],\n",
+       "        [6., 7.]]),\n",
+       " 'a': 1.0}"
       ]
      },
      "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decode(w, order=['c', 'b', 'a'], shapes=((1,), (2,2), (1,)), \n",
+    "       unflatten=True, cleanup=True, tonumpy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = lambda x, y, z: (x**2+z+y+np.exp(-y), np.array([x,y,z]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoded Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ein = Encoding(('x','y','z'))\n",
+    "Eout = Encoding(('a','b'), shapes=((1,), (3,)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ein.encode({'x': 1, 'y': 2, 'z': 3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_in_dict_out = lambda d: Eout.decode(f(*Ein.encode(d)))\n",
+    "dict_in_flat_out = lambda d: flatten_args(f(*Ein.encode(d)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.135335283236612, array([1, 2, 3]))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(*Ein.encode({'x': 1, 'y': 2, 'z': 3}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_in_dict_out({'x': 1, 'y': 2, 'z': 3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([6.1353354, 1.       , 2.       , 3.       ], dtype=float32)"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,69 +269,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': 6.135335283236612, 'b': array([1., 2., 3.])}"
+       "{'a': 6.135335445404053, 'b': array([1., 2., 3.])}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "decode(residuals, ('a','b'), shapes=((1,),(3,)), unflatten=True, cleanup=True)"
+    "Eout.decode(residuals, unflatten=True, cleanup=True, tonumpy=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class Encoder():\n",
-    "    def __init__(self, order, parent=None, shapes=None):\n",
-    "        self.order = order\n",
-    "        self.parent = parent\n",
-    "        self.shapes = shapes"
+    "## Operate with encoders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class EncodedFunction():\n",
-    "    def __init__(self, f, encoder=None, decoder=None):\n",
-    "        self.f = f\n",
-    "        self.encoder = encoder\n",
-    "        self.decoder = decoder\n",
-    "\n",
-    "    def dict_out_only(self,*args):\n",
-    "        return decode(self.f(*args), \n",
-    "                      self.decoder.order, shapes=self.decoder.shapes)\n",
-    "\n",
-    "    def dict_in_only(self, d):\n",
-    "        return f(*encode(d, self.encoder.order))\n",
-    "    \n",
-    "    def dict_in_flat_out(self, d):\n",
-    "        return flatten_args(self.dict_in_only(d))\n",
-    "    \n",
-    "    def dict_in_dict_out(self, d):\n",
-    "        return decode(self.dict_in_only(d), \n",
-    "                      self.decoder.order, shapes=self.decoder.shapes)\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,127 +311,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "E1 = Encoder((1,2,3), Encoder(('x','y','z'), Encoder(('A','B','C'))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: 'A', 2: 'B', 3: 'C'}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reverse_encoding(E1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compose(f, g=None, mapping=None, reverse=False):\n",
-    "    mapping = mapping if mapping is not None else dict()\n",
-    "    new_decoder = g.decoder if g is not None else f.decoder\n",
-    "    if reverse:\n",
-    "        mapping = reverse_encoding(f.encoder)\n",
-    "        mapping.update(reverse_encoding(new_decoder))\n",
-    "    func = f.f\n",
-    "    if g is not None:\n",
-    "        inter_order_out = tuple(mapping(key,key) for key in f.decoder.order)\n",
-    "        inter_order_in= tuple(mapping(key,key) for key in g.encoder.order)\n",
-    "        F = EncodedFunction(f, f.encoder, inter_order_in)\n",
-    "        G = EncodedFunction(g, inter_order_out, g.decoder)\n",
-    "        func = lambda *args: G.dict_in_only(F.dict_out_only(*args))   \n",
-    "    new_encoder_order = tuple(mapping(key,key) for key in f.encoder.order)\n",
-    "    new_encoder = Encoder(new_encoder_order, parent=f.encoder)\n",
-    "    new_decoder_order = tuple(mapping(key,key) for key in new_decoder.order)\n",
-    "    new_decoder = Encoder(new_decoder_order, parent=new_decoder)\n",
-    "    return EncodedFunction(func, new_encoder, new_decoder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "F = EncodedFunction(f, \n",
-    "                    Encoder(('x','z','y')), \n",
-    "                    Encoder(('a','b'), shapes=((1,),(3,))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = compose(F, mapping={'x':1, 'y':2, 'z':3, 'a':4}.get)\n",
-    "G = compose(F, mapping=lambda x,_: 'x_{}'.format(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'x_a': 6.135335283236612, 'x_b': array([1, 2, 3])}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "G.dict_in_dict_out({'x_x': 1, 'x_z': 2, 'x_y': 3})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "H = compose(G, reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': 6.049787068367864, 'b': array([1, 3, 2])}"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "H.dict_in_dict_out({'x': 1, 'y': 2, 'z': 3})"
+    "E1 = Encoding(('A','B','C'))\n",
+    "E2 = Encoding(('x','y','z'), parent=E1)\n",
+    "E3 = Encoding((1,2,3), parent=E2)"
    ]
   },
   {
@@ -349,7 +328,7 @@
     {
      "data": {
       "text/plain": [
-       "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
+       "{1: 'A', 2: 'B', 3: 'C'}"
       ]
      },
      "execution_count": 21,
@@ -358,7 +337,122 @@
     }
    ],
    "source": [
+    "reverse_encoding(E3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compose(f, g=None, mapping=None, parent_encoder=False):\n",
+    "    mapping = mapping if mapping is not None else dict()\n",
+    "    new_decoder = g.decoder if g is not None else f.decoder\n",
+    "    if parent_encoder:\n",
+    "        mapping = reverse_encoding(f.encoder)\n",
+    "        mapping.update(reverse_encoding(new_decoder))\n",
+    "        mapping = mapping.get\n",
+    "    func = f.f\n",
+    "    if g is not None:\n",
+    "        inter_order_out = tuple(mapping(key,key) for key in f.decoder.order)\n",
+    "        inter_order_in= tuple(mapping(key,key) for key in g.encoder.order)\n",
+    "        F = EncodedFunction(f, f.encoder, inter_order_in)\n",
+    "        G = EncodedFunction(g, inter_order_out, g.decoder)\n",
+    "        func = lambda *args: G.dict_in_only(F.dict_out_only(*args))   \n",
+    "    new_encoder_order = tuple(mapping(key,key) for key in f.encoder.order)\n",
+    "    new_encoder = Encoding(new_encoder_order, parent=f.encoder)\n",
+    "    new_decoder_order = tuple(mapping(key,key) for key in new_decoder.order)\n",
+    "    new_decoder = Encoding(new_decoder_order, parent=new_decoder)\n",
+    "    return EncodedFunction(func, new_encoder, new_decoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "F = EncodedFunction(f, Ein, Eout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "F.dict_in_dict_out({'x': 1, 'y': 2, 'z': 3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#G = compose(F, mapping={'x':1, 'y':2, 'z':3, 'a':4}.get)\n",
+    "G = compose(F, mapping=lambda x,_: 'x_{}'.format(['x','y','z','a','b'].index(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x_3': 6.135335283236612, 'x_4': array([1, 2, 3])}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.dict_in_dict_out({'x_0': 1, 'x_1': 2, 'x_2': 3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H = compose(G, parent_encoder=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H.dict_in_dict_out({'x': 1, 'y': 2, 'z': 3})"
    ]
   }
  ],
