--- a/minimdo/tests/test_compute.ipynb
+++ b/minimdo/tests/test_compute.ipynb
@@ -61,7 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "id": "9da52baa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modeling.compute import Var, eqvar\n",
+    "from trash.inputresolver import eqvars, default_out, default_in\n",
+    "from engine.torchengine import AnalyticalSetSympy\n",
+    "from engine.torchdata import symbols"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad6bffd3",
+   "metadata": {},
+   "source": [
+    "### Old library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "3edfc6bd",
    "metadata": {
     "execution": {
@@ -74,15 +95,75 @@
    },
    "outputs": [],
    "source": [
-    "x = Var('x', 2)\n",
-    "a = Var('a')\n",
-    "c = Var('c')\n",
+    "x,a,c = Var('x', 2), Var('a'), Var('c')\n",
     "y, eq0 = eqvar('y', x**2)\n",
-    "#y.varval = 10\n",
     "b, eq1 = eqvar('b', 2*a-x)\n",
     "eq2 = (c, b**2)\n",
     "eq3 = (a, c*b)\n",
-    "eq_list = [eq1, eq2, eq3]"
+    "eqs ={idx:eq for idx,eq in enumerate([eq0,eq1,eq2,eq3])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f7a81828",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-10-08T00:24:08.730865Z",
+     "iopub.status.busy": "2021-10-08T00:24:08.729866Z",
+     "iopub.status.idle": "2021-10-08T00:24:08.740863Z",
+     "shell.execute_reply": "2021-10-08T00:24:08.739860Z",
+     "shell.execute_reply.started": "2021-10-08T00:24:08.730865Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "eqv = eqvars(eqs)\n",
+    "dins = default_in(eqs)\n",
+    "dout = default_out(eqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "23c5c5a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: (b, 2*a - x), 1: (c, b**2), 2: (a, b*c)}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eqs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14f74667",
+   "metadata": {},
+   "source": [
+    "### New library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "343669ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x,a,c,y,b, indices = symbols('x, a, c, y, b')\n",
+    "eq0 = AnalyticalSetSympy(x**2, y)\n",
+    "eq1 = AnalyticalSetSympy(2*a-x, b)\n",
+    "eq2 = AnalyticalSetSympy(b**2, c)\n",
+    "eq3 = AnalyticalSetSympy(c*b, a)"
    ]
   },
   {
@@ -112,27 +193,6 @@
    ],
    "source": [
     "scipy.optimize.fsolve(lambda x: np.array([x[1]-(2*x[0]-2), x[2]-x[1]**2, x[0]-x[2]*x[1]]), np.array([1,1,1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "f7a81828",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-10-08T00:24:08.730865Z",
-     "iopub.status.busy": "2021-10-08T00:24:08.729866Z",
-     "iopub.status.idle": "2021-10-08T00:24:08.740863Z",
-     "shell.execute_reply": "2021-10-08T00:24:08.739860Z",
-     "shell.execute_reply.started": "2021-10-08T00:24:08.730865Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "eqs = idx_eqlist(eq_list)\n",
-    "eqv = eqvars(eqs)\n",
-    "dins = default_in(eqs)\n",
-    "dout = default_out(eqs)"
    ]
   },
   {
@@ -621,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:50:36) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
