--- a/minimdo/tests/test_workflow.ipynb
+++ b/minimdo/tests/test_workflow.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,9 @@
     "                            if not isinstance(elt, (list,tuple))]\n",
     "    if isinstance(item, (tuple, list)):\n",
     "        new_queue = item\n",
-    "        maxparent += 1\n",
-    "        parent = maxparent\n",
+    "        if isinstance(item, tuple):\n",
+    "            maxparent += 1\n",
+    "            parent = maxparent\n",
     "    # elif isinstance(item, list):\n",
     "    #     new_queue = item\n",
     "    else:\n",
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,22 +66,33 @@
     "        nextparent = newparent\n",
     "        allintercomps += intercomps\n",
     "    Ftree = OrderedDict(processed)\n",
-    "    Vtree = {c:(True,) for c in allintercomps}\n",
-    "    return Ftree, tree,Vtree "
+    "    Eout = {c:(True,) for c in allintercomps}\n",
+    "    return Ftree, tree,Eout "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ftree, Stree,Vtree = decode_order(test_order)"
+    "test_order = ([(1,2)],3,4,5)\n",
+    "test_order = [(1,2),3,([4,5,6],7),8]\n",
+    "Ftree, Stree, Eout = decode_order(test_order)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order = order_from_tree(Ftree, Stree, Eout, mergeendcomp=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -92,21 +104,105 @@
        " (ENDCOMP, 2, 2),\n",
        " (COMP, 3, 1),\n",
        " (SOLVER, 3, 1),\n",
+       " (COMP, 4, 3),\n",
+       " (COMP, 5, 3),\n",
+       " (COMP, 6, 3),\n",
        " (SOLVER, 4, 3),\n",
-       " (COMP, 4, 4),\n",
-       " (COMP, 5, 4),\n",
-       " (COMP, 6, 4),\n",
        " (ENDCOMP, 7, 3),\n",
-       " (COMP, 8, 1)]"
+       " (ENDCOMP, 8, 4),\n",
+       " (ENDCOMP, 9, 4)]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "order_from_tree(Ftree, Stree, Vtree, mergeendcomp=False)"
+    "order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from graph.workflow import EXPL, IMPL, EQ, NEQ, OBJ, SOLVE, OPT, SOLVER, VAR, COMP, ENDCOMP\n",
+    "from graph.graphutils import root_solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('',\n",
+       " 'ELIM',\n",
+       " [('analys', 'ELIMSOLVE', [], [1, 2]),\n",
+       "  3,\n",
+       "  ('analys', 'ELIMSOLVE', [4, ('analys', 'ELIMSOLVE', [], [5, 9]), 6], [7]),\n",
+       "  8],\n",
+       " [])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_order = [(1,2),3,([4,(5,9),6],7),8]\n",
+    "components = []\n",
+    "def process(elt, key): \n",
+    "    if isinstance(elt, tuple): \n",
+    "        if isinstance(elt[0], list):\n",
+    "            first_elt = [process(subelt, 'analys') for subelt in elt[0]]\n",
+    "            component = ('ELIMSOLVE', first_elt, list(elt[1:]))\n",
+    "            components.append(component)\n",
+    "            return (key,)+component\n",
+    "        else:\n",
+    "            component = ('ELIMSOLVE', [], [process(subelt, 'res') for subelt in elt])\n",
+    "            components.append(component)\n",
+    "            return (key,)+component\n",
+    "    elif isinstance(elt, list):\n",
+    "        component = ('ELIM', [process(subelt, 'analys') for subelt in elt],[])\n",
+    "        components.append(component)\n",
+    "        return (key,)+component\n",
+    "    else:\n",
+    "        return elt\n",
+    "process(test_order, '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ELIMSOLVE', [], [1, 2]),\n",
+       " ('ELIMSOLVE', [], [5, 9]),\n",
+       " ('ELIMSOLVE', [4, ('analys', 'ELIMSOLVE', [], [5, 9]), 6], [7]),\n",
+       " ('ELIM',\n",
+       "  [('analys', 'ELIMSOLVE', [], [1, 2]),\n",
+       "   3,\n",
+       "   ('analys', 'ELIMSOLVE', [4, ('analys', 'ELIMSOLVE', [], [5, 9]), 6], [7]),\n",
+       "   8],\n",
+       "  [])]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "components # need to create dictionary with instances"
    ]
   },
   {
@@ -199,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
