--- a/minimdo/tests/test_workflow.ipynb
+++ b/minimdo/tests/test_workflow.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -107,13 +107,11 @@
        " (COMP, 4, 3),\n",
        " (COMP, 5, 3),\n",
        " (COMP, 6, 3),\n",
-       " (SOLVER, 4, 3),\n",
        " (ENDCOMP, 7, 3),\n",
-       " (ENDCOMP, 8, 4),\n",
-       " (ENDCOMP, 9, 4)]"
+       " (COMP, 8, 1)]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +147,7 @@
        " [])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +194,7 @@
        "  [])]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
